--- a/style.css
+++ b/style.css
@@ -14,6 +14,17 @@
          cursor: pointer;
      }
 
+     .same-title {
+         color: #131313;
+         font-size: 2.8rem;
+         font-weight: 700;
+     }
+
+     .same-discription {
+         color: #727272;
+         font-weight: 400;
+     }
+
      /* header styles */
      header {
          background: rgba(255, 144, 14, 0.10);
@@ -27,11 +38,6 @@
 
      }
 
-     .nav-title {
-         color: #131313;
-         font-size: 2.8rem;
-         font-weight: 700;
-     }
 
      nav>ul {
          display: flex;
@@ -63,33 +69,82 @@
          font-weight: 700;
      }
 
-     .banner-discription {
+     .banner img {
+         margin-top: 20px;
+         width: 100%;
+     }
+
+
+     /* main style */
+     main {
+         max-width: 1440px;
+         margin: 70px auto;
+     }
+
+     /* team section style */
+     .team-container {
+         display: flex;
+         align-items: center;
+     }
+
+     .team-img {
+         display: grid;
+         grid-template-columns: repeat(2, 1fr);
+         gap: 1.5rem;
+     }
+
+     .team-content {
+         padding-left: 70px;
+         padding-right: 70px;
+     }
+
+     .team-title {
+         font-size: 2.8rem;
+     }
+
+     .quick-text {
          color: #727272;
-         font-weight: 400;
+         font-weight: 500;
      }
-     .banner img{
-        margin-top: 20px;
-        width: 100%;
+
+     .feature-text {
+         color: #FF900E;
+         font-size: 700;
      }
+
 
      /* RESPONSIVE MEDIA QUERY */
      /* Mobail Devise */
 
-@media screen and (max-width:576px){
-    header{
-        padding: 20px;
-    }
-    nav{
-        flex-direction: column;
-    }
-}
+     @media screen and (max-width:576px) {
+         header {
+             padding: 20px;
+         }
 
-  /* Tablet Devise */
-  @media screen and (min-width:576px) and (max-width:992px) {
-    header{
-        padding: 50px;
-    }
-    nav{
-        flex-direction: column;
-    }
-  }
+         nav,
+         .team-container {
+             flex-direction: column;
+         }
+
+         .team-img {
+             grid-template-columns: 1fr;
+         }
+
+         .team-content {
+             padding-left: 20px;
+             padding-right: 20px;
+         }
+     }
+
+     /* Tablet Devise */
+     @media screen and (min-width:576px) and (max-width:992px) {
+         header {
+             padding: 50px;
+         }
+
+         nav,
+         .team-container {
+             flex-direction: column;
+         }
+
+     }
